# Compiler-Design-project

./: .gitignore  CMakeLists.txt  CMakelists.txt  PL Language Compiler.sln  README.md  main.cpp
PL Language Compiler/: PL Language Compiler.vcxproj  PL Language Compiler.vcxproj.filters  main.cpp
PL Language Compiler/src/: Compiler Tokens.txt  Tokenizer.cpp  Tokenizer.h  test.c
PL Language Compiler/x64/Debug/: PL Language Compiler.exe.recipe  PL Language Compiler.ilk  vc143.idb
PL Language Compiler/x64/Debug/PL Langu.87050875.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  PL Language Compiler.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
src/: CMakeLists.txt  Compiler Tokens.txt  Grammar.txt  Lexical.cpp  Lexical.h  Syntaxical.cpp  Syntaxical.h  Tokenizer.cpp  test.c
